# RustyVault

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  encrypted_secret.key
src/: main.rs  mod.rs  vaults.txt
src/api/: mod.rs
src/api/routes/: api_routes.rs  data_models.rs  mod.rs  state.rs
src/api/services/: docs.rs  encryption.rs  mod.rs  persistance.rs
src/node/: node.rs
