[package]
name = "rustyvault"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.4.0"
futures = "0.3.29"
json = "0.12.4"
json-rust = "0.1.0"
serde = { version = "1.0.192", features = ["derive"] }
serde_json = "1.0.108"
sha256 = "1.4.0"
sodiumoxide = "0.2.7"
tokio = { version = "1.34.0", features = ["full"] }
uuid = { version = "1.5.0", features = ["v4"] }
